[tool.poetry]
name = "elevator"
version = "0.1.0"
description = ""
authors = ["Andy Miles <me@andykmiles.com>"]

[tool.poetry.dependencies]
python = "3.8.3"
flask = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = { version = "*", allow-prereleases = true }
mypy = "*"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
